gitops/manifests/media/radarr/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 321  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:release-5.28.0.10274
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 7878 
          resources:
            requests:
              memory: "256Mi"  
              cpu: "50m"      
            limits:
              memory: "2G"  
              cpu: "200m"
          volumeMounts:
            - mountPath: /config  # Mount for Radarr config
              name: config-storage
            - mountPath: /data # Single volume for Movies and Downloads
              name: media-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-radarr-config # PVC for config storage
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media   # PVC for data storage
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 7878 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
  tls:
  - hosts:
      - radarr.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
